# rust-amqp1

./: Cargo.toml  build.rs
amqp1/src/codec/decode/framing/: mod.rs
amqp1/src/framing/: mod.rs  open.rs
codegen/: definitions.rs  mod.rs  specification.json
examples/: client.rs
src/: errors.rs  io.rs  lib.rs  protocol.rs
src/codec/: constructor.rs  decode.rs  encode.rs  mod.rs
src/framing/: mod.rs
src/protocol/: mod.rs
src/types/: array.rs  mod.rs  variant.rs
