[package]
name = "amqp1"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]

[dependencies]
bytes = "0.4"
chrono = "0.4"
#nom = "3.1"
uuid = "0.4"
ordered-float = "0.5"
error-chain = "0.10"
tokio-io = "0.1"

[dependencies.nom]
version = "3.1"
features = ["nightly"]

[build-dependencies]
handlebars   = "0.27"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
lazy_static  = "0.2"