[package]
name = "amqp1"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]

[dependencies]
bytes = "0.4"
chrono = "0.4"
uuid = { version = "0.4", features = ["use_std"] }
ordered-float = "0.5"
error-chain = "0.10"
tokio-io = "0.1"
nom = "3.1"

[build-dependencies]
handlebars   = "0.27"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
lazy_static  = "0.2"